--- a/staff/anibal-estrella/prework/web/app/src/style.css
+++ b/staff/anibal-estrella/prework/web/app/src/style.css
@@ -334,6 +334,7 @@ button {
 .edit-post-modal {
     z-index: 1;
     backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
 }
 
 .add-post-modal form,
