--- a/staff/anibal-estrella/prework/web/app.16/src/style.css
+++ b/staff/anibal-estrella/prework/web/app.16/src/style.css
@@ -334,6 +334,7 @@ button:focus {
 	text-align: center;
 	background-color: var(--backcolor);
 	backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
 }
 
 .home-menu ul {
@@ -429,6 +430,7 @@ footer.home-footer {
 	width: 100vw;
 	background-color: var(--backcolor-80);
 	backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
 	padding: 2rem;
 	z-index: 1;
 }
