--- a/staff/anibal-estrella/prework/web/app.17/src/style.css
+++ b/staff/anibal-estrella/prework/web/app.17/src/style.css
@@ -338,6 +338,7 @@ The general sibling combinator (~) separates two selectors and matches all itera
 	text-align: center;
 	background-color: var(--backcolor);
 	backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
 }
 
 .home-menu ul {
@@ -433,6 +434,7 @@ footer.home-footer {
 	width: 100vw;
 	background-color: var(--backcolor-80);
 	backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
 	padding: 2rem;
 	z-index: 1;
 }
