--- a/staff/anibal-estrella/prework/web/app.19/src/style.css
+++ b/staff/anibal-estrella/prework/web/app.19/src/style.css
@@ -321,6 +321,7 @@ button:focus {
 	text-align: center;
 	background-color: var(--basecolor-80);
  		backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
 }
 
 .home-menu ul {
@@ -374,6 +375,7 @@ button:focus {
 	width: 100vw;
 	background-color: var(--basecolor-80);
 	backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
 	padding: 2rem;
 	z-index: 1;
 }
