--- a/staff/anibal-estrella/prework/web/app.21.LastOldschoolReactVersion/src/pages/Home.css
+++ b/staff/anibal-estrella/prework/web/app.21.LastOldschoolReactVersion/src/pages/Home.css
@@ -68,6 +68,7 @@
 	text-align: center;
 	background-color: var(--basecolor-80);
  		backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
 }
 
 .home-menu ul {
