--- a/staff/anibal-estrella/prework/web/app.21.LastOldschoolReactVersion/src/style.css
+++ b/staff/anibal-estrella/prework/web/app.21.LastOldschoolReactVersion/src/style.css
@@ -297,6 +297,7 @@ button:focus {
 	width: 100vw;
 	background-color: var(--basecolor-80);
 	backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
 	padding: 2rem;
 	z-index: 1;
 }
