--- a/staff/anibal-estrella/prework/web/app.8/style.css
+++ b/staff/anibal-estrella/prework/web/app.8/style.css
@@ -300,6 +300,7 @@ button:focus {
   text-align: center;
   background-color: #040404b7;
   backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
 }
 
 .home-menu ul{
@@ -378,6 +379,7 @@ footer.home-footer {
   width: 100vw;
   background-color: #000000c7;
   backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
   padding: 2rem;
   z-index: 1;
 }
